# app/aggregate/bitcoin/handlers/set_btc_price.go
@@ -1,41 +1,28 @@
 package handlers
 
 import (
-	"errors"
 	"net/http"
 
 	bitcoinEntity "github.com/F0rzend/simple-go-webserver/app/aggregate/bitcoin/entity"
 
-	"github.com/go-chi/render"
-	"github.com/rs/zerolog/log"
-
 	"github.com/F0rzend/simple-go-webserver/app/common"
+	"github.com/go-chi/render"
 )
 
 type SetBTCPriceRequest struct {
 	Price float64 `json:"price"`
 }
 
-var ErrBadRequest = errors.New("validation error")
-
 func (r SetBTCPriceRequest) Bind(_ *http.Request) error {
-	if _, err := bitcoinEntity.NewUSD(r.Price); err != nil {
-		return ErrBadRequest
-	}
-	return nil
+	_, err := bitcoinEntity.NewUSD(r.Price)
+	return err
 }
 
 func (h *BitcoinHTTPHandlers) SetBTCPrice(w http.ResponseWriter, r *http.Request) {
 	request := &SetBTCPriceRequest{}
 
-	switch err := render.Bind(r, request); err {
-	case nil:
-	case ErrBadRequest:
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	default:
-		log.Error().Err(err).Send()
-		w.WriteHeader(http.StatusInternalServerError)
+	if err := render.Bind(r, request); err != nil {
+		common.RenderHTTPError(w, r, err)
 		return
 	}
 
@@ -45,6 +32,5 @@ func (h *BitcoinHTTPHandlers) SetBTCPrice(w http.ResponseWriter, r *http.Request
 	}
 
 	render.Status(r, http.StatusNoContent)
-	w.Header().Set("Location", "/bitcoin")
 	render.Respond(w, r, nil)
 }
